syntax = "proto3";

package ics_file_manager;

option go_package = "github.com/nikita5637/quiz-registrator-api/pkg/pb/ics_file_manager;icsfilemanager";

import "google/protobuf/empty.proto";

message ICSFile {
	int32 id = 1;
	int32 game_id = 2;
	string name = 3;
}

service Service {
	// CreateICSFile adds new *.ics file record
	rpc CreateICSFile(CreateICSFileRequest) returns (ICSFile) {
	}

	// DeleteICSFile deletes *.ics file record
	rpc DeleteICSFile(DeleteICSFileRequest) returns (google.protobuf.Empty) {
	}

	// GetICSFile returns *.ics file record
	rpc GetICSFile(GetICSFileRequest) returns (ICSFile) {
	}

	// GetICSFileByGameID returns *.ics file record by game ID
	rpc GetICSFileByGameID(GetICSFileByGameIDRequest) returns (ICSFile) {
	}

	// ListICSFiles returns all *.ics file records
	rpc ListICSFiles(google.protobuf.Empty) returns (ListICSFilesResponse) {
	}
}

message CreateICSFileRequest {
	ICSFile ics_file = 1;
}

message DeleteICSFileRequest {
	int32 id = 1;
}

message GetICSFileRequest {
	int32 id = 1;
}

message GetICSFileByGameIDRequest {
	int32 game_id = 1;
}

message ListICSFilesResponse {
	repeated ICSFile ics_files = 1;
}
